--- a/npcs/babita.yaml
+++ b/npcs/babita.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: adolescent
+    age: Adolescent
 
     #
     # Races (case insensitive):
@@ -287,15 +287,6 @@ npc:
     # Required.
     #
     alignment: Neutral Good
-
-    #
-    # Alignment tendencies:
-    # same as alignment, can be 0 or more.
-    #
-    # Optional.
-    #
-    tendencies:
-    - N/A
 
     #
     # Languages the character speaks
@@ -464,22 +455,51 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Charisma
+    - Wisdom
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - Poison
     skills:
-    - Dwarf Abilities:
-      - Dwarven Resistance: Has advantage on Saving Throws against poison, and has Resistance against poison damage
-        Dwarven Combat Training: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
-        Stonecunning: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
-                      instead of his normal Proficiency Bonus  
+    - Fashion
+    proficiencies:
+    - Persuasion
+    - Performance
+    - History
+    - Brewer's Supplies
+  special-abilities:
+  - title: Dwarf Abilities
+  - abilities: 
+    - title: Darkvision
+    - content: Can see in dim light within 60 feet as if it were bright light, and in Darkness as if it were dim light. Can’t discern color in Darkness, only Shades of Gray.
+    - title: Dwarven Resistance
+    - content: Has advantage on Saving Throws against poison, and has Resistance against poison damage
+    - title: Tool Proficiency
+    - content: You gain proficiency with the artisan's tools of your choice; smith's tools, brewer's supplies, or mason's tools.       
+    - title: Dwarven Combat Training
+    - content: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
+    - title: Stonecunning
+    - content: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
+               instead of his normal Proficiency Bonus  
+  - title: Psionic Abilities
+  - abilities: 
+    - title: Psionic Charms
+    - content: You have a latent psionic ability that allows you to win over the opinions of others quite easily. You gets advantage on all persuasion checks.    
+    
+  - title: Attacks
+  - content: 1 Attacks usually with unarmed strikes or improvised weapons
+  - title: Combat Tactics
+  - content: Will typically breakdown at the site of combat out of fear that any damage would mar her beauty
 
-    special-abilities:
-    - Proficiencies: Persuasion, Performance. Babs has latent psionic ability that allows her to win over the opinions of others quite easily - She gets advantage on all persuasion checks.    
-    attacks: |
-      1 Attacks
-    combat-tactics: |
-      Will typically breakdown at the site of combat out of fear that any damage would mar her beauty
-    special-equipment:
-    - Her chainmail is made from light metals forged into surprising strength; it hugs curves
-    - does not hinder movement.
+  - title: Special Equipment
+  - abilities:
+    - title: Mithral Chainmail
+    - content: Mithral is a light, flexible metal. A mithral chain shirt or breastplate can be worn under normal clothes. If the armor normally imposes disadvantage on Dexterity (Stealth) checks or has a Strength requirement, 
+               the mithral version of the armor doesn't. It hugs curves
 
   profile:
 
