--- a/npcs/beach.yaml
+++ b/npcs/beach.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: older adult
+    age: Older Adult
 
     #
     # Races (case insensitive):
@@ -465,48 +465,77 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Dexterity
+    - Constitution
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - Extreme Heat and Dehydration
+    resistances:
+    - Poison
     skills:
-    - Desert Orc Abilities:
-      - Darkvision: 
-        - Description: can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray
-        Aggressive: As a bonus action, you can move up to your speed toward an enemy of your choice that you can see or hear. You must end this move closer to the enemy than you started
-        Primal Intuition: Proficient in Insight and Survival
-        Powerful Build: count as one size larger when determining your carrying capacity and the weight you can push, drag, or lift
-        Heat Resistance: Gains Advantage on saving throws caused by extremely hot weather or dehydration
-        
-      Rogue Abilities:
-      - Expertise: 
-        - Description: Double proficiency bonus with Thieve's Tools and Sleight of Hand
-        Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
-        Cunning Action: Can take a bonus action on each turn to Hide, Disengage, or Dash
-        Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage
+    - Etiquette and Mixology
+    proficiencies:
+    - Cooking
+    - Mixology
+    - Disguise Kit
+    - Poisoner's Kit
+    - Stealth
+    - Insight
+    - Survival
+    - Thieve's Tools
+    - Sleight of Hand
+  special-abilities:
+  - title: Desert Orc Abilities
+  - abilities: 
+    - title: Darkvision
+    - content: Can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray           
+    - title: Aggressive
+    - content: As a bonus action, you can move up to your speed toward an enemy of your choice that you can see or hear. You must end this move closer to the enemy than you started
+    - title: Primal Intuition
+    - content: Proficient in Insight and Survival
+    - title: Powerful Build
+    - content: Count as one size larger when determining your carrying capacity and the weight you can push, drag, or lift
+    - title: Relentless Endurance
+    - content: Once per long rest, when reduced to 0hp but not outright killed, can drop to 1hp instead
+    - title: Savage Attack
+    - content: When scoring a critical hit on a melee weapon attack, can roll an additonal damage dice of the weapons type and add it to the total
+    - title: Heat Resistance
+    - content: Gains Advantage on saving throws caused by extremely hot weather or dehydration
+  - title: Rogue Abilities
+  - abilities: 
+    - title: Expertise
+    - content: Double proficiency bonus with Thieve's Tools and Sleight of Hand
+    - title: Sneak Attack
+    - content: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
+    - title: Cunning Action
+    - content: Can take a bonus action on each turn to Hide, Disengage or Dash
+    - title: Uncanny Dodge
+    - content: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage
+  - title: Assassin Abilities
+  - abilities: 
+    - title: Bonus Proficiencies
+    - content: When you choose this archetype at 3rd level, you gain proficiency with the disguise kit and the poisoner's kit.
+    - title: Assassinate
+    - content: You are at your deadliest when you get the drop on your enemies. You have advantage on attack rolls against any creature that hasn't taken a turn in the combat yet. In addition, any hit you score against a 
+               creature that is surprised is a critical hit.
 
-      Assassin Abilities:
-      - Assassinate: You have advantage on attack rolls against any creature that hasn't taken a turn in the combat yet. In addition, any hit you score against a creature that is surprised is a critical hit
-
-    special-abilities:
-    - Proficiencies:
-      - Cooking
-      - Mixology
-      - Disguise Kit
-      - Poisoner's Kit
-      - Stealth
-      - Insight
-      - Survival
-      - Thieve's Tools
-      - Sleight of Hand
     
-    attacks: |
-      2 Attacks with Assassin's Dagger
-    combat-tactics: |
-      If combat erupts, Beach appears to flee but instead is actually finding the best shadows from which to strike
-    special-equipment:
-    - Assassins Dagger:
-      - Description:  When Beach Hits a creature that is surprised with this dagger, target must make a DC 18 CON throw or take 4d6 necrotic damage
-      Hidden Blade:
-      - Description: (1d4 piercing, finesse)
-      Burleigh and Stronginthearm Number IX:
-      - Description: a +3 precise crossbow; only 2 were ever made
+  - title: Attacks
+  - content: 2 Attacks with Assassin's Dagger
+  - title: Combat Tactics
+  - content: If combat erupts, Beach appears to flee but instead is actually finding the best shadows from which to strike
+
+  - title: Special Equipment
+  - abilities:
+    - title: Assassins Dagger
+    - content: When Beach Hits a creature that is surprised with this dagger, target must make a DC 18 CON throw or take 4d6 necrotic damage
+    - title: Hidden Blade
+    - content: A small blade, mounted to the forearm. Thanks to the mechanism covering the wrist-mount, the blade is capable of freely extending and releasing itself, but it is still small enough to be well disguised under a 
+               cloak. When you make an attack against a creature that has not yet taken a turn since initiative began, they take 1d4 additional damage.
+    - title: Burleigh and Stronginthearm Number IX
+    - content: +3 crossbow that holds 6 bolts before it must be reloaded. Only 2 were ever made
                                                                    
   profile:
 
@@ -526,3 +555,14 @@ npc:
       deep blues eyes and saw a nimble, dedicated soul; much different from the ferocious hatred he'd seen in his battles against raid-parties. "No," Amin exclaimed, "this one is different. 
       And we needn't fall victim to the same virulent hatred that afflicts the Orcs." Amin brought Ukhtor with him for the journey. Staring into his sea-blue eyes he pronounced that the youngster be named 'Beach'. 
       Raised within the Constabulary's ranks, Beach learned skills more akin to his natural abilities and became an agile killer. He was also imbued with their sense of noblility and respect.
+    #
+    # Personality (or something like that):
+    # Expand on the introduction, appearance, expressions, mannerisms, etc.
+    # without any length limits.
+    #
+    # Required.
+    # No length limit for now.
+    #
+    personality: |
+      Unlike most Orcs, Beach does his best to avoid violence. He is cultured and regal, poilte and knowledgeable in ettiquette and manners. He is a superb butler and is highly knowledgeable in culinary and serving arts.  
+      Ironiocally, he is also very capable when it comes to violence. He is skilled with disguise, poison and assassination and will never shy away from defending himself or his family. 
